appointment and billing controller changes added
